@@ -28,9 +28,7 @@ unset RBL_BLACKLISTS RBL_DEBUG RBL_QUEUEDIR TCPLOCALIP QUEUEDIR
 rm -rf $tmp/queuedir $tmp/queuedir
 
 <result 127.0.0.2 false>
-mailfront[#]: rbl: blacklisted by zen.spamhaus.org:
-mailfront[#]: https://www.spamhaus.org/sbl/query/SBL2
-mailfront[#]: https://www.spamhaus.org/query/ip/127.0.0.2
+mailfront[#]: rbl: blacklisted by zen.spamhaus.org: https://www.spamhaus.org/sbl/query/SBL2 // https://www.spamhaus.org/query/ip/127.0.0.2
 250 local.host^M
 mailfront[#]: MAIL FROM:<somewhere>
 mailfront[#]: 451 Blocked: https://www.spamhaus.org/sbl/query/SBL2
@@ -50,9 +48,7 @@ mailfront[#]: bytes in: 71 bytes out: 242
 queuedir tmp: 0 new: 0
 
 <result 127.0.0.2 true>
-mailfront[#]: rbl: blacklisted by zen.spamhaus.org:
-mailfront[#]: https://www.spamhaus.org/sbl/query/SBL2
-mailfront[#]: https://www.spamhaus.org/query/ip/127.0.0.2
+mailfront[#]: rbl: blacklisted by zen.spamhaus.org: https://www.spamhaus.org/sbl/query/SBL2 // https://www.spamhaus.org/query/ip/127.0.0.2
 250 local.host^M
 mailfront[#]: MAIL FROM:<somewhere>
 250 Sender='somewhere'.^M
